[package]
name = "astate"
version = "0.1.0"
authors = ["Kevin Wang <wy721@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"

[dependencies.tokio]
git = "https://github.com/tokio-rs/tokio"
branch = "master"

[dependencies.tokio-futures]
git = "https://github.com/tokio-rs/tokio"
branch = "master"
features = ["async-await-preview"]
